--- a/app/templates/poi/show/experiences/index.hbs
+++ b/app/templates/poi/show/experiences/index.hbs
@@ -1,17 +1,6 @@
-
-<AuToolbar @size="medium" @border="bottom" >
-  <AuToolbarGroup>
-    <AuHeading @level="2" @skin="5">
-      Belevingen
-    </AuHeading>
-  </AuToolbarGroup>
-  <AuToolbarGroup>
-    <LinkTo @route="poi.show.experiences.new" @model={{this.poi}} class="au-c-button au-c-button--tertiary">
-      <AuIcon @icon="add" @alignment="left" />
-      Event toevoegen
-    </LinkTo>
-  </AuToolbarGroup>
-</AuToolbar>
+<AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
+  Kennisboom
+</AuHeading>
 
 <div class="au-o-box au-c-body-container au-c-body-container--scroll au-c-theme-gray-100">
   <ul class="au-o-grid au-o-grid--tiny au-u-padding-bottom">
@@ -22,5 +11,11 @@
         </article>
       </li>
     {{/each}}
+    <li class="au-o-grid__item">
+      <LinkTo @route="poi.show.experiences.new" @model={{this.poi}} class="au-c-button au-c-button--secondary au-c-button--block">
+        <AuIcon @icon="add" @alignment="left" />
+        Event toevoegen
+      </LinkTo>
+    </li>
   </ul>
 </div>
