--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -379,3 +379,50 @@
     cursor: grabbing;
   }
 }
+
+
+.au-c-tabs {
+  display: flex;
+  position: relative;
+  align-items: flex-end;
+  z-index: 1;
+
+  .au-c-button {
+    @include au-font-size($au-h5);
+    border: 0;
+    background-color: $au-white;
+    padding-left: $au-unit;
+    padding-right: $au-unit;
+    height: $au-unit-large - $au-unit-tiny;
+    text-decoration: underline;
+    text-decoration-color: tint($au-link-secondary-color,70);
+  }
+
+  .au-c-button:hover,
+  .au-c-button:focus {
+    color: $au-gray-900;
+    box-shadow: none;
+    text-decoration-color: tint($au-link-secondary-hover-color,80);
+  }
+
+  .au-c-button:focus {
+    outline-offset: -.3rem;
+  }
+
+  .au-c-button + .au-c-button {
+    border-left: .1rem solid $au-gray-200;
+  }
+
+  .au-c-button.active {
+    // position: relative;
+    // background-color: $au-gray-100;
+    text-decoration: none;
+    box-shadow: inset 0 -.3rem 0 $au-gray-700;
+    font-weight: $au-medium;
+    color: $au-gray-900;
+    // padding-top: $au-unit-small;
+    // padding-bottom: $au-unit-small;
+    // height: $au-unit-large;
+    // bottom: -.1rem;
+  }
+}
