--- a/app/templates/poi/show/experiences/index.hbs
+++ b/app/templates/poi/show/experiences/index.hbs
@@ -1,5 +1,5 @@
 <AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
-  Kennisboom
+  Evenementen
 </AuHeading>
 
 <div class="au-o-box au-c-body-container au-c-body-container--scroll au-c-theme-gray-100">
@@ -14,7 +14,7 @@
     <li class="au-o-grid__item">
       <LinkTo @route="poi.show.experiences.new" @model={{this.poi}} class="au-c-button au-c-button--secondary au-c-button--block">
         <AuIcon @icon="add" @alignment="left" />
-        Event toevoegen
+        Evenement toevoegen
       </LinkTo>
     </li>
   </ul>
