change tree and event labels

--- a/app/templates/experience/edit/index.hbs
+++ b/app/templates/experience/edit/index.hbs
@@ -12,7 +12,7 @@
 <AuToolbar @border="top" class="au-u-margin-top au-u-padding-top-small">
   <AuToolbarGroup class="au-c-toolbar__group--row">
     <ConfirmationButton @onConfirm={{this.delete}}>
-      Event verwijderen
+      Tentoonstelling verwijderen
     </ConfirmationButton>
   </AuToolbarGroup>
 </AuToolbar>
