--- a/app/templates/poi/show.hbs
+++ b/app/templates/poi/show.hbs
@@ -33,10 +33,10 @@
   <AuToolbar @border="bottom" @size="medium">
     <div class="au-c-tabs">
       <LinkTo class="au-c-button au-c-button--secondary" @route="poi.show.tree" @model={{@model}}>
-        Algemene kennis
+        Toegankelijkheidsdata
       </LinkTo>
       <LinkTo class="au-c-button au-c-button--secondary" @route="poi.show.experiences.index" @model={{@model}}>
-        Evenementen
+        Tentoonstelling
       </LinkTo>
     </div>
   </AuToolbar>
