--- a/app/templates/poi/show/tree.hbs
+++ b/app/templates/poi/show/tree.hbs
@@ -1,5 +1,5 @@
 <AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
-  Algemene kennis
+  Toegankelijkheidsdata
 </AuHeading>
 
 <div class="au-c-body-container au-c-theme-gray-100">
