--- a/app/templates/poi/show/experiences/new.hbs
+++ b/app/templates/poi/show/experiences/new.hbs
@@ -2,7 +2,7 @@
   <AuToolbar class="au-u-margin-bottom">
     <AuToolbarGroup>
       <AuHeading @level="2" @skin="3">
-        Nieuw event
+        Nieuwe tentoonstelling
       </AuHeading>
     </AuToolbarGroup>
   </AuToolbar>
@@ -22,26 +22,26 @@
 
     <chart.if @state="creating">
       <div>
-        <AuHeading @level="3" @skin="5">Event aanmaken</AuHeading>
+        <AuHeading @level="3" @skin="5">Tentoonstelling aanmaken</AuHeading>
         <AuLoader />
       </div>
     </chart.if>
 
     <chart.if @state="failed">
-      <p>Oops, failed to create your event</p>
-      <button type="button" {{on "click" (fn chart.preventAndSend "RESET")}}>RESET</button>
+      <p>Aanmaken van tentoonstelling is mislukt</p>
+      <button type="button" {{on "click" (fn chart.preventAndSend "RESET")}}>Probeer opnieuw</button>
     </chart.if>
 
     <chart.if @state="created">
       <div>
-        <AuHeading @level="3" @skin="5">Event aanmaken, doorsturen naar detailpagina.</AuHeading>
+        <AuHeading @level="3" @skin="5">Tentoonstelling aanmaken, doorsturen naar detailpagina.</AuHeading>
         <AuLoader />
       </div>
     </chart.if>
 
     <chart.if @state="failedTransitioning">
       <div>
-        <AuHeading @level="3" @skin="5">Failed to transition to your created experience.</AuHeading>
+        <AuHeading @level="3" @skin="5">Verwijzing naar aangemaakte tentoonstelling is mislukt</AuHeading>
       </div>
     </chart.if>
 
@@ -49,7 +49,7 @@
       <AuToolbarGroup class="au-c-toolbar__group--row">
         <LinkTo class="au-c-link au-c-link--secondary" @route="poi.show.experiences.index" @model={{this.poi}}>
           <AuIcon @icon="arrow-left" @alignment="left" />
-          Terug naar alle events
+          Terug naar alle tentoonstellingen
         </LinkTo>
       </AuToolbarGroup>
     </AuToolbar>
