--- a/app/components/au-navigation-narrator.hbs
+++ b/app/components/au-navigation-narrator.hbs
@@ -1,3 +1,3 @@
-<div tabindex="-1" class="au-u-hidden-visually ember-sr-only {{if this.isFocusable "ember-sr-only-focusable"}}" id="ember-a11y-refocus-nav-message">
+<div tabindex="-1" class="au-u-hidden-visually ember-sr-only {{if @isFocusable "ember-sr-only-focusable"}}" id="ember-a11y-refocus-nav-message">
   {{yield}}
 </div>
