update styling variables

--- a/app/templates/developers/styling.hbs
+++ b/app/templates/developers/styling.hbs
@@ -23,6 +23,14 @@
   <li><CodeInline @code='data-style-outline="#FFC515"'/>: focus outline kleur (HEX kleur waarde)</li>
 </ul>
 
+<p>Optioneel kan je ook een aantal kleuren aanpassen voor de geïnverteerde kleurmodus:</p>
+<ul>
+  <li><CodeInline @code='data-style-check-dark="#AAD0F9"'/>: geïnverteerde check/icoon kleur (HEX kleur waarde)</li>
+  <li><CodeInline @code='data-style-link-dark="#AAD0F9"'/>: geïnverteerde link kleur (HEX kleur waarde)</li>
+  <li><CodeInline @code='data-style-link-dark-hover="#DCECFD"'/>: geïnverteerde link hover kleur (HEX kleur waarde)</li>
+  <li><CodeInline @code='data-style-error-dark="#D92626"'/>: geïnverteerde foutmelding kleur (HEX kleur waarde)</li>
+</ul>
+
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
 <p>Indien u problemen tegenkomt bij het implementeren van de widget kan u ons contacteren op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
 <p>Bugs of issues met de widget kan u melden op de <a href="https://github.com/lblod/frontend-toevla/issues" target="_blank" rel="noopener noreferrer" class="au-c-link">github pagina</a> van het project.</p>
