List points of interest for login
Logical flow for listing PointOfInterest instances for the login flow by
PointOfInterest.

Note that we expect to have two different mock login flows.  One by
point-of-interest and one by account.  The combination of both should
allow us to check various cases, including those where an entity can act
on behalf of multiple other entities.

--- a/app/templates/mock-login.hbs
+++ b/app/templates/mock-login.hbs
@@ -1,7 +1,2 @@
-<label>Search Account: <input {{on "input" (perform this.postponedSearch)}} value={{this.search}} placeholder="search string" /></label>
-
-{{get this.accounts "length"}}
-
-{{#each this.accounts as |account|}}
-  {{account.id}}
-{{/each}}
+<h1>Mock login</h1>
+{{outlet}}
