Mock login using point of interest
We can now do a mock login for a point of interest with the
authenticator.  Cool!

--- a/app/templates/mock-login/pois.hbs
+++ b/app/templates/mock-login/pois.hbs
@@ -7,7 +7,7 @@
 <ul>
   {{#each this.pois as |poi|}}
     <li>
-      {{poi.id}} -- {{poi.label}}
+      <span role="button" {{on "click" (fn this.login poi)}}>{{poi.id}} -- {{poi.label}}</span>
     </li>
   {{/each}}
 </ul>
