--- a/app/templates/poi/index.hbs
+++ b/app/templates/poi/index.hbs
@@ -4,10 +4,12 @@
         <AuHeading @skin="2">Locaties</AuHeading>
     </AuToolbarGroup>
     <AuToolbarGroup>
-      <LinkTo @route="poi.new" class="au-c-button">
-        <AuIcon @icon="add" @alignment="left" />
-        Locatie toevoegen
-      </LinkTo>
+      {{#if this.currentAccount.roleIsValidator}}
+        <LinkTo @route="poi.new" class="au-c-button">
+          <AuIcon @icon="add" @alignment="left" />
+          Locatie toevoegen
+        </LinkTo>
+      {{/if}}
     </AuToolbarGroup>
   </AuToolbar>
   <div class="au-o-box au-c-theme-gray-100 au-c-body-container au-c-body-container--scroll">
