--- a/app/templates/poi/edit.hbs
+++ b/app/templates/poi/edit.hbs
@@ -36,26 +36,28 @@
           <AuInput @width="block" id="edit" @type="string" @value={{this.model.locationString}} />
         </p>
 
-        <p>
-          <AuLabel>Iconen</AuLabel>
-          <ul class="au-c-list-radio">
-            {{#each this.sortedIcons as |concept|}}
-              <li class="au-c-list-radio__item">
-                <label class="au-c-list-radio__button">
-                  <input
-                    name="radios"
-                    type="checkbox"
-                    checked={{ember-data-object-in-array concept this.model.summaryIcons}}
-                    {{on "change" (fn this.toggleIcon concept)}}>
-                  <span class="au-c-list-radio__label">
-                    <ConceptIcon @for={{concept.uri}} />
-                    {{concept.title}}
-                  </span>
-                </label>
-              </li>
-            {{/each}}
-          </ul>
-        </p>
+        {{#if this.currentAccount.roleIsValidator}}
+          <p>
+            <AuLabel>Iconen</AuLabel>
+            <ul class="au-c-list-radio">
+              {{#each this.sortedIcons as |concept|}}
+                <li class="au-c-list-radio__item">
+                  <label class="au-c-list-radio__button">
+                    <input
+                      name="radios"
+                      type="checkbox"
+                      checked={{ember-data-object-in-array concept this.model.summaryIcons}}
+                      {{on "change" (fn this.toggleIcon concept)}}>
+                    <span class="au-c-list-radio__label">
+                      <ConceptIcon @for={{concept.uri}} />
+                      {{concept.title}}
+                    </span>
+                  </label>
+                </li>
+              {{/each}}
+            </ul>
+          </p>
+        {{/if}}
 
         <AuButtonGroup class="au-u-margin-top-small">
           <AuButton type="submit">Opslaan</AuButton>
