--- a/app/templates/mock-login.hbs
+++ b/app/templates/mock-login.hbs
@@ -1,2 +1,13 @@
-<h1>Mock login</h1>
-{{outlet}}
+<div class="au-c-main-container__content au-c-main-container__content--scroll">
+  <main id="content">
+    <AuContentHeader @titlePartOne="Vlaanderen" @titlePartTwo="is gelijke kansen">
+      <img sizes="50vw" src="/assets/images/toevla-header-1600.jpg" srcset="/assets/images/toevla-header-320.jpg 320w, /assets/images/toevla-header-1024.jpg 1024w, /assets/images/toevla-header-1600.jpg 1600w" alt="Foto van een parkeerplaats voor rolstoelgebruikers.">
+    </AuContentHeader>
+    <section class="au-o-region-large">
+      <div class="au-o-layout">
+        <AuHeading @skin="2" class="au-u-margin-bottom">Mock login</AuHeading>
+        {{outlet}}
+      </div>
+    </section>
+  </main>
+</div>
