--- a/app/templates/session/roles.hbs
+++ b/app/templates/session/roles.hbs
@@ -1,13 +1,15 @@
 {{page-title "Roles"}}
 
-<ul>
+<ul class="au-c-list">
   {{#each this.currentAccount.availableRoles as |role|}}
-    <li aria-role="button" {{on "click" (fn this.chooseRole role)}}>
-      {{#if (is-validator-role role)}}
-        Inter validator
-      {{else}}
-        Invoerder: {{role.pointOfInterest.label}}
-      {{/if}}
+    <li class="au-c-list__item">
+      <AuButton @skin="secondary" @width="block" {{on "click" (fn this.chooseRole role)}} >
+        {{#if (is-validator-role role)}}
+          Inter validator
+        {{else}}
+          Invoerder: {{role.pointOfInterest.label}}
+        {{/if}}
+      </AuButton>
     </li>
   {{/each}}
 </ul>
