--- a/app/templates/mock-login/pois.hbs
+++ b/app/templates/mock-login/pois.hbs
@@ -1,5 +1,7 @@
 {{page-title "Mock login by point of interest"}}
 
+<AuHeading @skin="2" class="au-u-margin-bottom">Log in als museum</AuHeading>
+
 <div class="au-u-margin-bottom">
   <AuLabel for="loginSearch" >Zoek locaties</AuLabel>
   <AuInput id="loginSearch" @width="block" {{on "input" this.searchEvent}} value={{this.search}} />
