change home route, redirect mock-login to pois

--- a/app/templates/buildings.hbs
+++ b/app/templates/buildings.hbs
@@ -3,7 +3,7 @@
     <AuToolbarGroup>
       <ul class="au-c-list-horizontal">
         <li class="au-c-list-horizontal__item">
-          <AuLink @linkRoute="login" @skin="secondary">
+          <AuLink @linkRoute="index" @skin="secondary">
             <AuIcon @icon="arrow-left" @alignment="left" />
             Home
           </AuLink>
