--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<AuMainHeader @homeRoute="login" @appTitle="Toegankelijk Vlaanderen" @contactRoute="contact">
+<AuMainHeader @homeRoute="index" @appTitle="Toegankelijk Vlaanderen" @contactRoute="contact">
   {{!-- <LinkTo @route="poi" role="menuitem" class="au-c-button au-c-button--tertiary">
        <AuIcon @icon="login" @alignment="left" />Aanmelden
        </LinkTo> --}}
