--- a/app/templates/poi/show/tree/edit.hbs
+++ b/app/templates/poi/show/tree/edit.hbs
@@ -1,4 +1,4 @@
-<div class="au-c-action-sidebar">
+<div class="au-c-action-sidebar" tabindex="0">
   <div class="au-o-box au-c-action-sidebar__header">
     <AuHeading @level="4" @skin="3">
       {{@model.treeNode.title}}
