--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,15 +1,16 @@
+<div id="ember-appuniversum-wormhole"></div>
+
 <AuMainHeader @homeRoute="index" @appTitle="Toegankelijk Vlaanderen" @contactRoute="contact">
   <LinkTo @route="login" role="menuitem" class="au-c-button au-c-button--tertiary">
     <AuIcon @icon="login" @alignment="left" />Aanmelden
   </LinkTo>
-  <span role="menuitem"  class="au-c-button au-c-button--tertiary">
+  {{!-- <span role="menuitem"  class="au-c-button au-c-button--tertiary"> --}}
     {{!-- {{#if this.session.isAuthenticated}}
       <AcmidmLogout />
     {{else}}
       <AcmidmLogin />
     {{/if}} --}}
-
-  </span>
+  {{!-- </span> --}}
 </AuMainHeader>
 
 <main class="au-c-main-container" id="main">
